scale fix + nowrap fix

--- a/src/style/partials/section-page.scss
+++ b/src/style/partials/section-page.scss
@@ -10,8 +10,6 @@
 	margin: 0 auto;
 	height: 100%;
 	position: absolute;
-	// left: calc(50% - 56.222vh / 2);
-
 	right:0;
 	top: 0;
 	background-color: #fff;
@@ -305,16 +303,9 @@
 	}
 }
 
-
-// modificators
-
-// .small-text {
-// 	font-size: 1rem;
-// }
 .justify {
 	text-align: justify;
 }
-
 
 &.italic,
 &.quote {
@@ -334,8 +325,10 @@
 	right: 0;
 	bottom: 0;
 	text-align: right;
+
 	p {
 		font-size: 2.30vh;
+		white-space: nowrap;
 	}
 }
 
